# misis-lct

./: .gitignore  API_EXAMPLES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  readme_сервис_аналитики_отзывов_для_маркетинга_газпромбанка.md
api/: Dockerfile  app.py  main.py
api/core/: database.py  models.py  schemas.py  settings.py
api/core/agent/: __init__.py  graph.py  utils.py
api/core/db/: review_crud.py
api/core/services/: predict.py
api/routes/: reviews.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  check-docker.bat  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App_backup.jsx  index.css
ml/: classification.ipynb  quick_demo.py  simple_extract.py
parsers/: banki.py  bankiros.py  bankiros2.py  check_banki.py  check_sravni.py  check_vbr.py  sravni.py  tempCodeRunnerFile.py  vbr.py
src/lct_gazprombank/: main.py
src/lct_gazprombank/agent/: graph.py  prompts.py  state.py  utils.py
src/lct_gazprombank/core/: config.py
src/lct_gazprombank/routers/: __init__.py  predict.py  root.py  statistics.py
src/lct_gazprombank/schemas/: __init__.py  review.py
src/lct_gazprombank/services/: __init__.py  predict.py  statistics.py
src/lct_gazprombank/storage/: __init__.py  storage.py
src/lct_gazprombank/utils/: __init__.py  loader.py
src/misis_lct/agent/: graph.py  prompts.py  utils.py
src/misis_lct/api/: prediction.py
src/misis_lct/core/: config.py
src/misis_lct/schemas/: reviews.py
src/misis_lct/services/: prediction.py
tests/: test_api.py
