[project]
name = "lct_gazprombank"
version = "1.0.0"
description = "Сервис анализа отзывов для Газпромбанка"
authors = [
    {name = "avolxn", email = "vlad.eldashov2303@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "langchain-google-genai>=2.1.12",
]

[tool.poetry]
packages = [{include = "lct_gazprombank", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
