[project]
name = "misis-lct"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "langchain-google-genai (<2.1.12)",
    "langgraph (>=0.6.8,<0.7.0)",
    "langchain (>=0.3.27)",  # Removed upper bound
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "langchain-openai (>=0.3.34,<0.4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"